[gd_scene load_steps=3 format=3 uid="uid://br6kvivy5wsqe"]

[ext_resource type="Script" path="res://components/graph nodes/api/api_param.gd" id="1_nm6ax"]
[ext_resource type="Script" path="res://components/graph nodes/api/type_option_button.gd" id="2_nmnoa"]

[node name="APIParam" type="GraphNode"]
title = "API Parameter"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_nm6ax")

[node name="SlotContainer0" type="HBoxContainer" parent="."]
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = 160

[node name="OutputLabel" type="Label" parent="SlotContainer0"]
layout_mode = 2
text = "output"

[node name="Label" type="Label" parent="SlotContainer0"]
layout_mode = 2
text = "route"

[node name="NameRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="NameRow"]
layout_mode = 2
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="NameRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 17

[node name="TypeLabel" type="Label" parent="TypeRow"]
layout_mode = 2
text = "Type:"

[node name="TypeOptionButton" type="OptionButton" parent="TypeRow"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_nmnoa")

[node name="LocPicker" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LocLabel" type="Label" parent="LocPicker"]
layout_mode = 2
text = "Location: "

[node name="LocOptionButton" type="OptionButton" parent="LocPicker"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Path"
popup/item_1/text = "Query"
popup/item_1/id = 1
popup/item_2/text = "Body"
popup/item_2/id = 2
